--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -3,14 +3,15 @@
 <!-- load other js -->
 <script src="{{ '/assets/lib/lazysizes.min.js' | relative_url }}" async></script>
 {% if layout.gallery == true or page.gallery == true %}
-<script src="{{ '/assets/lib/spotlight.bundle.js' | relative_url }}" defer></script>{% endif %}
-{% if page.custom-foot or layout.custom-foot %}
-{%- assign page_feet = page.custom-foot | split: ";" -%}
-{%- assign layout_feet = layout.custom-foot | split: ";" -%}
+<script src="{{ '/assets/lib/spotlight.bundle.js' | relative_url }}" defer></script>
+{% endif %}
+{% if page['custom-foot'] or layout['custom-foot'] %}
+{%- assign page_feet = page['custom-foot'] | default: "" | split: ";" -%}
+{%- assign layout_feet = layout['custom-foot'] | default: "" | split: ";" -%}
 {%- assign feet = page_feet | concat: layout_feet -%}
 {% for f in feet %}
-{% if f %}
-{% include {{ f }} %}
-{% endif %}
+  {% if f %}
+    {% include f %}
+  {% endif %}
 {% endfor %}
 {%- endif -%}
